--- a/jekyll/index.html
+++ b/jekyll/index.html
@@ -22,14 +22,14 @@ layout: default
 
 			<div class="row">
 				<div class="column left">
-					<img title="Aaron" alt="Aaron's Headshot" class="headshot" src="css/images/retina/aaron.jpg">
+					<img title="Aaron" alt="Aaron's Headshot" class="headshot" src="/images/retina/aaron.png">
 					<h3>Aaron</h3>
 					<p>Aaron takes pride in assembling the perfect team for your needs and keeping all the moving parts organized and heading towards your goals.</p>
 					<a class="twitter" href="http://www.twitter.com/aparkening">@aparkening</a><br>
 					<a class="email" href="mailto:aaron@webmeadow.com">aaron@webmeadow.com</a>
 				</div>
 				<div class="column right">
-					<img title="Eileen" alt="Eileen's Headshot" class="headshot" src="css/images/retina/eileen.jpg">
+					<img title="Eileen" alt="Eileen's Headshot" class="headshot" src="/images/retina/eileen.png">
 					<h3>Eileen</h3>
 					<p>Eileen likes taking a big ol' mess of content and turning it into something structured, sensible, and flexible.</p>
 					<a class="twitter" href="http://www.twitter.com/webmeadow">@webmeadow</a><br>				
