fixing some site config stuff. Need to make the conference scheduling easier

--- a/jekyll/index.html
+++ b/jekyll/index.html
@@ -25,19 +25,18 @@ layout: default
 				<img title="Aaron" alt="Aaron's Headshot" class="headshot" src="/images/retina/aaron.png">
 				<h3>Aaron</h3>
 				<p>Aaron takes pride in assembling the perfect team for your needs and keeping all the moving parts organized and heading towards your goals.</p>
-				<a class="twitter" href="http://www.twitter.com/aparkening">@aparkening</a><br>
-				<a class="email" href="mailto:aaron@webmeadow.com">aaron@webmeadow.com</a>
+				<a class="twitter" href="http://www.twitter.com/{{site.aaron_twitter}}">@{{site.aaron_twitter}}</a><br>
+				<a class="email" href="mailto:{{site.aaron_email}}">{{site.aaron_email}}</a>
 			</div>
 			<div class="column right">
 				<img title="Eileen" alt="Eileen's Headshot" class="headshot" src="/images/retina/eileen.png">
 				<h3>Eileen</h3>
 				<p>Eileen likes taking a big ol' mess of content and turning it into something structured, sensible, and flexible.</p>
-				<a class="twitter" href="http://www.twitter.com/webmeadow">@webmeadow</a><br>				
-				<a class="email" href="mailto:eileen@webmeadow.com">eileen@webmeadow.com</a>
+				<a class="twitter" href="http://www.twitter.com/{{site.twitter_username}}">@{{site.twitter_username}}</a><br>				
+				<a class="email" href="mailto:{{site.eileen_email}}">{{site.eileen_email}}</a>
 			</div>
 		</div><!-- /row -->
 		</section><!-- /strategists -->
-
 
 	 <section id="meet">
 	 	<h2>Meet us at:</h2>
@@ -71,12 +70,23 @@ layout: default
 					<p><a href="http://nyccamp.org/summit/non-profits-ngo-summit">Non-Profit &amp; NGO Summit</a></p>
          			  </article>
 				</li>
-
-
-
 			</ul>
 		</div>
 	</section><!-- /meet -->
+
+
+	<section id="blog">
+		<h2>Check out our presentation archive:</h2>
+		<nav class="topnav">
+			<ul>
+			{% for page in site.pages %}
+			  {% if page.title %}
+			  <li><a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
+			  {% endif %}
+			{% endfor %}
+			</ul>
+		</nav>
+	</section>
 
 
 	<section id="worked-with">
